[workspace]
resolver = "3"
members = [
    "learnkitty-backend",
    "learnkitty-lib"
]

[workspace.dependencies]
learnkitty-lib = { path = "./learnkitty-lib" }
ts-rs = { path = "../ts-rs/ts-rs" }
anyhow = "1.0"
async-openai = { version = "0.31.0-beta", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
